# sp404mk2-sample-agent

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  APP_DEMO.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_VISUAL.md  BATCH_IMPORT_FINAL_REPORT.md  BATCH_IMPORT_SUMMARY.txt  BATCH_PROCESSING_REPORT.md  CLAUDE.md  COMMANDS.md  CONFIDENCE_SCORING_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CRATE_VOL5_FINAL_REPORT.md  CURRENT_FUNCTIONALITY.md  DEBUGGING_PATCH_KIT_UNMOUNT.md  DEBUG_FLOW_DIAGRAM.md  DEBUG_INDEX.md  DEBUG_KIT_UNMOUNT_APPLIED.md  DEBUG_PATCH_SUMMARY.md  DEBUG_QUICK_TEST.md  DOCKER_DEPLOYMENT_SUMMARY.md  DRUMTHRASH_IMPORT_REPORT.md  DRUMTHRASH_IMPORT_STATUS.md  Dockerfile  Dockerfile.playwright  ENDPOINT_INVENTORY.md  ESSENTIA_TASK_2.6_SUMMARY.md  FRONTEND_COMPREHENSIVE_TEST_REPORT.md  FRONTEND_TESTING_INDEX.md  FRONTEND_TEST_REPORT_2025-11-16.json  FRONTEND_TEST_SUMMARY.md  HARDWARE_INTEGRATION_SUMMARY.md  IMPORT_SUMMARY_QUICK_REF.txt  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  LICENSE  MCP_TEST_REPORT.md  (+64 more)
.claude/: AGENT_SYSTEM_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  agent-launcher.md  settings.json
.claude-library/: REGISTRY.json
backend/: .env.example  EMBEDDING_SERVICE_INTEGRATION.md  EMBEDDING_SERVICE_VERIFICATION.md  VIBE_SEARCH_IMPLEMENTATION.md  VIBE_SEARCH_QUICK_REF.md  docker-compose.yml  example_embedding_usage.py  import_summary.txt  pytest.ini  requirements-test.txt  requirements.txt  run.py  sp404_samples.db  test_db.py  test_feature_flags_demo.py
dev/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLOUD_STORAGE_ISSUES.md  COLLECTIONS_API.md  COLLECTIONS_PHASE_2B_SUMMARY.md  COLLECTIONS_QUICK_START.md  CONVERSATIONAL_CLI.md  CYCLE_1_CONSOLIDATED_TEST_REPORT.md  CYCLE_3_TEST_REPORT.md  DEPLOYMENT_CHECKLIST.md  DOCKER.md  DOCKER_DEPLOYMENT.md  E2E_TESTING_REPORT.md  EDGE_ARCHITECTURE_FINAL.md  ERA_EXPERT.md  ESSENTIA_INSTALL.md  ESSENTIA_INTEGRATION_POINTS.md  ESSENTIA_QUICK_START.md  FREE_SAMPLE_PACKS_CLOUD_STORAGE.md  GROOVE_ANALYST.md  HARDWARE_MANUAL_INTEGRATION.md  HTMX_MIGRATION_COMPLETE.md  HTMX_TO_REACT_MIGRATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INTELLIGENT_ORGANIZATION.md  LARAVEL_FASTAPI_ARCHITECTURE.md  MIDI_INTEGRATION_PLAN.md  PHASE_1_DELIVERABLES.md  PHASE_2_CONSOLIDATED_FINDINGS.md  PHASE_3_ACTUAL_COMPLETION.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_FRONTEND_CLEANUP_REPORT.md  PHASE_3_PROGRESS_REPORT.md  PHASE_3_STATUS_UPDATE.md  PHASE_4A_COMPLETION_REPORT.md  PHASE_4B_COMPLETION_SUMMARY.md  PHASE_4B_DOCUMENTATION_REPORT.md  PHASE_4B_ENDPOINT_CLEANUP_REPORT.md  (+38 more)
expansion-plans/: ai-discovery-engine.md  file-management-suite.md
frontend/: index.html  login.html  package-lock.json  playwright.config.js  vite.config.js
frontend-legacy/: QUICK_START.md  THEME_SYSTEM_GUIDE.md  VIBE_SEARCH_UI_README.md  package.json  playwright.config.js  vite.config.js
modernize-react/: README.md
nginx/: nginx.conf
react-app/: API_CLIENT_ARCHITECTURE.md  API_CLIENT_COMPLETE.md  API_QUICK_REFERENCE.md  APPSHELL_ARCHITECTURE.md  APPSHELL_COMPARISON.md  APPSHELL_EXAMPLES.md  APPSHELL_INTEGRATION.md  APPSHELL_QUICK_REF.md  APPSHELL_README.md  AUDIO_PLAYER_IMPLEMENTATION.md  AUDIO_PLAYER_QUICKSTART.md  AUDIO_PLAYER_README.md  BATCH_ANALYSIS.md  BATCH_COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FILES_CREATED.md  KIT_BUILDER_ARCHITECTURE.md  KIT_BUILDER_IMPLEMENTATION.md  QUICK_START_KIT_BUILDER.md  README.md  SESSION_SUMMARY_2025-11-16.md  SHADCN_INSTALLATION_REPORT.md  SHADCN_SETUP.md  SIMILARITY_SEARCH_UI.md  USAGE_PAGE_ANALYSIS.md  VERIFICATION_CHECKLIST.md  WEEK2_COMPONENTS.md  WEEK3_COMPLETION_REPORT.md  WEEK3_COMPONENTS.md  WEEK3_DELIVERABLES.md  WEEK_4_6_COMPLETE.md  WEEK_4_6_FILES.txt  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js  verify-week3.sh  (+1 more)
review_queue/: master_inventory.json
scripts/: README.md  batch_import_samples.py  config.json  (+11 more)
(+622 files in other folders)
